fix: checking on mobile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,5 @@
 .profile__edit-button {
   background-color: #000000;
-  border-radius: 2px;
   box-sizing: border-box;
   border: 1px solid #FFFFFF;
   background-image: url("../../../images/edit_button.svg");
